# grimoire

./: .gitignore  .verify.yaml  CONTRIBUTING.md  DESIGN.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/locomo/: PROTOCOL.md  REPORT.md  dev_recall.py  run_locomo.py
benchmarks/longmemeval/: PROTOCOL.md  REPORT.md  run_lme.py
capture/: README.md
capture/extension/: background.js  manifest.json  options.html
cli/: grimoire.py  mnemo.py
deploy/: Dockerfile  grimoire.service  mnemo.service
docs/: ARCHITECTURE.md  PLUGINS.md
plugins/journal-heatmap/: client.js  plugin.json  style.css
plugins/kanban/: client.js  plugin.json  style.css
plugins/katex/: client.js  plugin.json
plugins/mermaid/: client.js  plugin.json
plugins/pomodoro/: client.js  plugin.json
plugins/vault-stats/: client.js  plugin.json
plugins/word-goal/: client.js  plugin.json
server/: __main__.py  ai.py  app.py  config.py  crdt.py  crdtstore.py  crypto.py  db.py  history.py  index.py  markdown.py  mcp_server.py  plugins.py  queries.py  render.py  secrets.py  settings.py  syncclient.py  trash.py  vault.py  watcher.py
server/routers/: ask.py  canvas.py  crdt.py  daily.py  media.py  memory.py  misc.py  notes.py  plugins.py  read.py  search.py  secrets.py  settings.py  sync.py  templates.py
tests/: conftest.py
tests/api/: test_ai_api.py  test_aliases.py  test_attachments.py  test_calendar.py  test_canvas_api.py  test_capture_media.py  test_crdt_api.py  test_export.py  test_export_vault_and_operators.py  test_facts_api.py  test_history_api.py  test_import.py  test_memory_api.py  test_memory_consolidate.py  test_negative.py  test_note_encryption.py  test_notes_api.py  test_pin.py  test_plugins_api.py  test_private_rag.py  test_query_and_embeds_api.py  test_random_duplicate.py  test_read_export.py  test_secret_vault_security.py  test_security.py  test_settings.py  test_sync.py  test_syncclient.py  test_tag_rename.py  test_tasks.py  test_templates.py  test_trash.py  test_unlinked.py  test_vault.py  test_vault_rotation.py
tests/e2e/: conftest.py  test_live_editor.py  (+4 more)
tools/: build-editor.mjs  editor-entry.mjs  package-lock.json  package.json
web/: app.js  canvas.js  editor.js  graph.js  index.html  manifest.webmanifest  markdown.js  plugins.js  style.css  sw.js  util.js  vaultui.js
(+38 files in other folders)
