[project]
name = "mnemo"
version = "0.5.0"
description = "Local-first, AI-native notes with an encrypted secret vault your AI can use"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jeremiah Mackey" }]
requires-python = ">=3.11"
keywords = ["notes", "markdown", "local-first", "ai", "rag", "mcp", "obsidian",
            "knowledge-base", "self-hosted", "wiki"]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "watchdog>=4.0",
    "cryptography>=42",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8", "playwright>=1.45"]

[project.scripts]
mnemo = "cli.mnemo:main"

[project.urls]
Homepage = "https://github.com/JeremiahM37/mnemo"
Documentation = "https://github.com/JeremiahM37/mnemo/blob/main/DESIGN.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
