[project]
name = "grimoire"
version = "1.0.0"
description = "Local-first, AI-native notes with an encrypted secret vault your AI can use"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jeremiah Mackey" }]
requires-python = ">=3.11"
keywords = ["notes", "markdown", "local-first", "ai", "rag", "mcp", "obsidian",
            "knowledge-base", "self-hosted", "wiki"]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "watchdog>=4.0",
    "cryptography>=42",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8", "playwright>=1.45"]

[project.scripts]
grimoire = "cli.grimoire:main"

[project.urls]
Homepage = "https://github.com/JeremiahM37/grimoire"
Documentation = "https://github.com/JeremiahM37/grimoire/blob/main/DESIGN.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "tools"]

[tool.ruff.lint]
# E/F: pycodestyle+pyflakes core · B: bugbear · I: import order · UP: modern syntax
select = ["E", "F", "B", "I", "UP"]
ignore = [
  "E501",   # long lines: templates/HTML strings — line-length is advisory here
  "E702", "E701",  # small same-line statements are idiomatic in this codebase
  "B008",   # FastAPI Depends() in defaults is the framework idiom
]
